--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       }
     </script>
     <style>
-      body { margin: 0; background-color: #050f0a; overflow: hidden; }
+      html, body, #root { width: 100%; height: 100%; margin: 0; padding: 0; }
+      body { background-color: #050f0a; overflow: hidden; }
       ::-webkit-scrollbar { width: 0px; background: transparent; }
       .video-feed {
         position: absolute;
